# equities-workbench

infra/: .env.example  .gitignore  DEVELOPMENT_LOG.md  The_Moat_Project_Specification.docx  pyproject.toml
infra/config/: config.yaml  schema_map.yaml
infra/src/moat/: __init__.py  schemas.py  stats.py  stress_test.py  utils.py
infra/src/moat/data/: __init__.py  local_ingestor.py  manager.py  provider.py  yfinance_adapter.py
infra/src/moat/engines/: __init__.py  vector_engine.py
infra/src/moat/sandbox/: __init__.py  dsl_wrapper.py  sandbox.py
infra/tests/: __init__.py  test_backtest_engine.py  test_data_layer.py  test_sandbox.py  test_stress_test.py
kalshi-mm/: .gitignore  ADDENDUM_A_V2.md  QUOTING_LOGIC.md  README.md  TODO.md  config.example.toml  config_rfq.example.toml  explore_api.py  list_all.py  list_incentives.py  list_markets.py  main.py  nfl_tickers.py  probe.py  requirements.txt  (+1 more)
workbench/event-researcher/: .env.example  .gitignore  README.md  pyproject.toml
workbench/event-researcher/config/: filters.toml  settings.toml  watchlist.toml
workbench/event-researcher/scripts/: backfill_prices.py  init_db.py  refresh_data.py  seed_watchlist.py
workbench/event-researcher/src/: __init__.py  main.py
workbench/event-researcher/src/agent/: __init__.py  orchestrator.py  prompts.py
workbench/event-researcher/src/agent/tools/: __init__.py  compute.py  external.py  local_data.py  registry.py  scenarios.py
workbench/event-researcher/src/data/: __init__.py  database.py  models.py  schema.py
workbench/event-researcher/src/data/sources/: __init__.py  base.py  fmp.py  seekingalpha.py  yfinance_source.py
workbench/event-researcher/src/monitor/: __init__.py  filters.py  flags.py  surfacer.py
workbench/event-researcher/src/ui/: __init__.py  app.py
workbench/event-researcher/src/ui/widgets/: __init__.py  chat_view.py  monitor_view.py
workbench/event-researcher/src/utils/: __init__.py  config.py  datetime_utils.py  logging.py
workbench/event-researcher/tests/: __init__.py  conftest.py
workbench/event-researcher/tests/test_agent/: __init__.py  test_external_tools.py  test_tools.py
workbench/event-researcher/tests/test_data/: __init__.py  test_database.py  test_sources.py
workbench/event-researcher/tests/test_monitor/: __init__.py  test_filters.py  test_surfacer.py
(+43 files in other folders)
