[project]
name = "event-researcher"
version = "0.1.0"
description = "Agent-augmented research environment for event-driven trading analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "httpx>=0.27.0",
    "textual>=0.85.0",
    "plotext>=5.3.0",
    "yfinance>=0.2.46",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
researcher = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
